migrating related to RelatedDocument (#446)
* migrating related to RelatedDocument

* fixing codacy

* fixing codacy

* adding null checks

* code review